--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"url": "https://github.com/NatLibFi/melinda-record-matching-js"
 	},
 	"license": "MIT",
-	"version": "5.0.0",
+	"version": "5.0.1-alpha.1",
 	"type": "module",
 	"main": "./dist/index.js",
 	"bin": "./dist/cli.js",
@@ -37,12 +37,12 @@
 		"dev:debug": "cross-env LOG_LEVEL=debug DEBUG=@natlibfi/* NODE_ENV=test npm run watch:test"
 	},
 	"dependencies": {
-		"@natlibfi/marc-record": "^10.0.0",
-		"@natlibfi/marc-record-serializers": "^11.0.0",
-		"@natlibfi/melinda-commons": "^14.0.0",
-		"@natlibfi/sru-client": "^7.0.0",
+		"@natlibfi/marc-record": "^10.0.1",
+		"@natlibfi/marc-record-serializers": "^11.0.1",
+		"@natlibfi/melinda-commons": "^14.0.2",
+		"@natlibfi/sru-client": "^7.0.1",
 		"debug": "^4.4.3",
-		"isbn3": "^2.0.0",
+		"isbn3": "^2.0.2",
 		"moment": "^2.30.1",
 		"natural": "^8.1.0",
 		"uuid": "^13.0.0",
@@ -50,10 +50,10 @@
 	},
 	"devDependencies": {
 		"@natlibfi/fixugen": "^3.0.0",
-		"@natlibfi/fixugen-http-client": "^4.0.0",
+		"@natlibfi/fixugen-http-client": "^4.0.1",
 		"@natlibfi/fixura": "^4.0.0",
 		"cross-env": "^10.1.0",
-		"esbuild": "^0.27.0",
-		"eslint": "^9.39.1"
+		"esbuild": "^0.27.2",
+		"eslint": "^9.39.2"
 	}
 }
